--- a/textchange/templates/textchange/accountcreation.html
+++ b/textchange/templates/textchange/accountcreation.html
@@ -32,15 +32,8 @@
   <body>
 
     <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="{% url 'textchange:accountcreation' %}">Create Account/Sign In</a></li>
-            <li role="presentation"><a href="{% url 'textchange:settings' %}"><img src="../../static/textchange/gear.png" height="25" width="25"></img></a></li>
-          </ul>
-        </nav>
-        <a href="{% url 'textchange:index' %}"><img src="../../static/textchange/back.png" height="40" width="40"></img></a>
-      </div>
+	
+      {% include "textchange/navbar.html" %}
 
       <div class="row marketing">
         <div class="col-lg-6">
@@ -51,6 +44,10 @@
         <div class="col-lg-6">
           <h4>Sign In</h4>
 		  <p>Sign in to your account here</p>
+		  <form method="POST"> {% csrf_token %}
+		  {{ form.as_p }}
+		  <input type="submit">Submit</input>
+		  </form>
         </div>
       </div>
 
