--- a/textchange/templates/textchange/accountcreation.html
+++ b/textchange/templates/textchange/accountcreation.html
@@ -42,6 +42,7 @@
 		  <form method="POST"> {% csrf_token %}
 		  {{ form.as_p }}
 		  <input type="submit"></input>
+		  </form>
         </div>
 		
         <div class="col-lg-6">
