--- a/textchange/templates/textchange/navbar.html
+++ b/textchange/templates/textchange/navbar.html
@@ -2,8 +2,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation"><a href="{% url 'textchange:accountcreation' %}">Create Account/Sign In</a></li>
-            <li role="presentation"><a href="{% url 'textchange:settings' %}"><img src="../../static/textchange/gear.png" height="25" width="25"></img></a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Textchange UVic</h3>
+        <h3 class="text-muted"><a href="{% url 'textchange:index' %}">Textchange UVic</a></h3>
       </div>
