--- a/textchange/templates/textchange/results.html
+++ b/textchange/templates/textchange/results.html
@@ -35,17 +35,30 @@
       
 	  {% include "textchange/navbar.html" %}
 	  
+	  <div>
+		{% for items in textbook_info %}
+			{{textbook_info.textbook}}
+		{% endfor %}
+	  </div>
       <div class="row marketing">
         <div class="col-lg-6">
           <h4>Wishlist/Postings</h4>
           <p>View your wishlist and postings here.</p>
 		{% for items in wishlist_info %}
-			{{items.user}}
+			<table>
+			<tr><td>{{items.user}} {{items.textbook}}</td></tr>
+			</table>
 		{% endfor %}	
 		</div>
         <div class="col-lg-6">
           <h4>Settings</h4>
+		  
           <p>Change your profile and application settings here</p>
+		  {% for items in posting_info %}
+			<table>
+			<tr><td>{{ items.condition }} {{items.price}} {{items.user}} {{items.textbook}}</td></tr>
+			</table>
+	      {% endfor %}
         </div>
       </div>
 
