Minor cosmetic changes

--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -32,13 +32,12 @@
   <body>
 
     <div class="container">
-      
+
 	  {% include "textchange/navbar.html" %}
 
       <div class="jumbotron">
         <h1>Textchange!</h1>
-        <p class="lead">Buy and sell used textbooks, easily, and at low prices!</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Search bar?</a></p>
+
       </div>
 
       <div class="row marketing">
@@ -46,10 +45,9 @@
           <p><a class="btn btn-lg btn-success" href="{% url 'textchange:wishlisting' %}" role="button">Wishlist</a></p>
           <p>View your wishlist and postings here.</p>
         </div>
-		
+
         <div class="col-lg-6">
-          <p><a class="btn btn-lg btn-success" href="{% url 'textchange:settings' %}" role="button">Settings</a></p>
-          <p>Change your profile and application settings here</p>
+          <p><a class="btn btn-lg btn-success" href="" role="button">Remove</a></p>
         </div>
       </div>
 
