Add profile page, minor html edits

--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="col-lg-6">
-          <a class="btn btn-lg btn-success" href="{% url 'textchange:settings' %}" role="button">Settings</a>
+          <a class="btn btn-lg btn-success" href="{% url 'textchange:settings' %}" role="button">Profile</a>
           <p>Change your profile and application settings here</p>
         </div>
       </div>
