--- a/textchange/templates/textchange/accountcreation.html
+++ b/textchange/templates/textchange/accountcreation.html
@@ -32,8 +32,10 @@
   <body>
 
     <div class="container">
-	
-      {% include "textchange/navbar.html" %}
+
+      <div class="header clearfix">
+          <h3 class="text-muted"><a href="{% url 'textchange:index' %}">Textchange UVic</a></h3>
+      </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
@@ -44,7 +46,7 @@
 		  <input type="submit"></input>
 		  </form>
         </div>
-		
+
         <div class="col-lg-6">
           <h4>Sign In</h4>
 		  <p>Sign in to your account here</p>
