--- a/textchange/templates/textchange/profile.html
+++ b/textchange/templates/textchange/profile.html
@@ -35,18 +35,30 @@
 
 	  {% include "textchange/navbar.html" %}
 
-      <div class="jumbotron">
-        <h1>Wishlist</h1>
-      </div>
-
+	  <div>
+		{% for items in textbook_info %}
+			{{textbook_info.textbook}}
+		{% endfor %}
+	  </div>
       <div class="row marketing">
         <div class="col-lg-6">
-          <p><a class="btn btn-lg btn-success" href="{% url 'textchange:wishlisting' %}" role="button">Wishlist</a></p>
+          <h4>Wishlist/Postings</h4>
           <p>View your wishlist and postings here.</p>
-        </div>
-
+		{% for items in wishlist_info %}
+			<table>
+			<tr><td>{{items.user}} {{items.textbook}}</td></tr>
+			</table>
+		{% endfor %}
+		</div>
         <div class="col-lg-6">
-          <p><a class="btn btn-lg btn-success" href="" role="button">Remove</a></p>
+          <h4>Settings</h4>
+
+          <p>Change your profile and application settings here</p>
+		  {% for items in posting_info %}
+			<table>
+			<tr><td>{{ items.condition }} {{items.price}} {{items.user}} {{items.textbook}}</td></tr>
+			</table>
+	      {% endfor %}
         </div>
       </div>
 
