--- a/textchange/templates/textchange/navbar.html
+++ b/textchange/templates/textchange/navbar.html
@@ -1,9 +1,13 @@
 
 <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="{% url 'textchange:accountcreation' %}">Create Account/Sign In</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted"><a href="{% url 'textchange:index' %}">Textchange UVic</a></h3>
-      </div>
+  <nav>
+    <ul class="nav nav-pills pull-right">
+      {% if request.user.is_authenticated %}
+        <li role="presentation"><a href="{% url 'textchange:accountcreation' %}">logout</a></li>
+      {% else %}
+        <li role="presentation"><a href="{% url 'textchange:accountcreation' %}">Create Account/Sign In</a></li>
+      {% endif %}
+    </ul>
+  </nav>
+  <h3 class="text-muted"><a href="{% url 'textchange:index' %}">Textchange UVic</a></h3>
+</div>
