Stabalize login, logout, create account

--- a/textchange/templates/textchange/accountcreation.html
+++ b/textchange/templates/textchange/accountcreation.html
@@ -43,7 +43,7 @@
 		  <p>Join the community!</p>
 		  <form method="POST"> {% csrf_token %}
 		  {{ form.as_p }}
-		  <input type="submit"></input>
+		  <input type="submit" value="Submit"></input>
 		  </form>
         </div>
 
