--- a/textchange/templates/textchange/settings.html
+++ b/textchange/templates/textchange/settings.html
@@ -1,57 +1,64 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>Textchange</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../static/textchange/index.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../../static/textchange/jumbotron.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../static/textchange/index.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+{% include "textchange/head.html" %}
 
   <body>
 
     <div class="container">
-      
+
 	  {% include "textchange/navbar.html" %}
 
-      <div class="jumbotron">
-        <h1>Textchange!</h1>
-        <p class="lead">Buy and sell used textbooks, easily, and at low prices!</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Search bar?</a></p>
-      </div>
+<!--
+http://bootsnipp.com/snippets/featured/address-details-modal-form
+Profile template taken from here
+ -->
 
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>Wishlist/Postings</h4>
-          <p>View your wishlist and postings here.</p>
-        </div>
-		
-        <div class="col-lg-6">
-          <h4>Settings</h4>
-          <p>Change your profile and application settings here</p>
-        </div>
-      </div>
+    <div class="row">
+ <div class="col-md-4 col-md-offset-4">
+   <form class="form-horizontal" role="form">
+     <fieldset>
+
+       <!-- Form Name -->
+       <legend>Profile</legend>
+
+       <!-- Text input-->
+       <div class="form-group">
+         <label class="col-sm-2 control-label" for="textinput">Username</label>
+         <div class="col-sm-10">
+           <input type="text" placeholder="{{ user.username }}" class="form-control">
+         </div>
+       </div>
+
+       <!-- Text input-->
+       <div class="form-group">
+         <label class="col-sm-2 control-label" for="textinput">Email</label>
+         <div class="col-sm-10">
+           <input type="text" placeholder="{{ user.email }}" class="form-control">
+         </div>
+       </div>
+
+       <!-- Text input-->
+       <div class="form-group">
+         <label class="col-sm-2 control-label" for="textinput">Phone</label>
+         <div class="col-sm-10">
+           <input type="text" placeholder="{{ user.phone }}" class="form-control">
+         </div>
+       </div>
+
+       <div class="form-group">
+         <div class="col-sm-offset-2 col-sm-10">
+           <div class="pull-right">
+             <button type="submit" class="btn btn-default">Cancel</button>
+             <button type="submit" class="btn btn-primary">Save</button>
+           </div>
+         </div>
+       </div>
+
+     </fieldset>
+   </form>
+ </div><!-- /.col-lg-12 -->
+</div><!-- /.row -->
 
       <footer class="footer">
         <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
