--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -14,7 +14,7 @@
         <p class="lead">Buy and sell used textbooks, easily, and at low prices!</p>
 
         <form method="POST"> {% csrf_token %}
-  		  {{ form.as_p }}
+  		  {{ form3.as_p }}
   		  <input type="submit" value="Search"></input>
   		  </form>
       </div>
