--- a/textchange/templates/textchange/results.html
+++ b/textchange/templates/textchange/results.html
@@ -21,7 +21,7 @@
       <!-- Table -->
       <table class="table">
         {% for items in results %}
-        <a><tr><td>{{items.textbook_name}}</td><td>{{items.class_name}}</td><td>{{items.author}}</td><td>{{items.isbn}}</td><td><img href="../../static/textchange/forward.png" height="40"></img></td></tr></a>
+        <tr><td>{{items.textbook_name}}</td><td>{{items.class_name}}</td><td>{{items.author}}</td><td>{{items.isbn}}</td><td><a href = "{% url 'textchange:textbook' %}"><img href="../../static/textchange/forward.ico" height="40" width="40"></img></a></td></tr>
         {% endfor %}
       </table>
     </div>
