--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -10,8 +10,8 @@
 	  {% include "textchange/navbar.html" %}
 
 	  <div>
-  	{{ text_name.textbook_name }}
-    {{ text_name.class_name }}
+  	{{ text.textbook_name }}
+    {{ text.class_name }}
 	  </div>
       <div class="row marketing">
         <div class="col-lg-6">
