--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -12,11 +12,13 @@
       <div class="jumbotron">
         <h1>{{ text.textbook_name }}!</h1>
         <p class="lead">{{ text.class_name }} {{ text.author }} {{ text.isbn }}</p>
+        <input type="button" id="addlisting" value="Add a Posting"></input>
+        <input type="button" id="addwishlist" value="Add to Wishlist"></input>
       </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <a class="btn btn-lg btn-success" href="#" role="button">Add to your wishlist</a>
+          <h3>Possible Buyers</h3>
           <table class="table">
             {% for wishes in wishlists %}
             <tr><td>{{wishes.textbook}}</td><td>{{wishes.user}}</td><td><a href = "{% url 'textchange:contact' uuser=wishes.user uisbn=text.isbn %}">></a></td></tr>
@@ -25,7 +27,7 @@
         </div>
 
         <div class="col-lg-6">
-          <a class="btn btn-lg btn-success" href="#" role="button">Add a Posting</a>
+          <h3>Possible Sellers</h3>
           <table class="table">
             {% for posts in listings %}
             <tr><td>{{posts.textbook}}</td><td>{{posts.condition}}</td><td>{{posts.price}}</td><td>{{posts.user}}</td><td><a href = "{% url 'textchange:contact' uuser=posts.user uisbn=text.isbn %}">></a></td></tr>
