Add contact and about, test add wish
Added urls and links to contact and about
Tried using empty form for adding a wishlist item

--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -30,6 +30,17 @@
           <p>Change your profile and application settings here</p>
         </div>
       </div>
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <a class="btn btn-lg btn-success" href="{% url 'textchange:about' %}" role="button">About Me</a>
+          <p>Learn about the developer</p>
+        </div>
+
+        <div class="col-lg-6">
+          <a class="btn btn-lg btn-success" href="{% url 'textchange:contactme' %}" role="button">Contact Me</a>
+          <p>Send in any requests or concerns</p>
+        </div>
+      </div>
 
       <footer class="footer">
         <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
