--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -13,7 +13,7 @@
         <h1>{{ text.textbook_name }}!</h1>
         <p class="lead">{{ text.class_name }} {{ text.author }} {{ text.isbn }}</p>
         <input type="button" id="addlisting" value="Add a Posting"></input>
-        <input type="button" id="addwishlist" value="Add to Wishlist"></input>
+        <a class="btn btn-lg btn-success" href="{% url 'textchange:textbook' uisbn=text.isbn %}" role="button">Add to Wishlist</a>
       </div>
 
       <div class="row marketing">
