--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -15,7 +15,7 @@
 
         <form method="POST"> {% csrf_token %}
   		  {{ form3.as_p }}
-  		  <input type="submit" value="Search" name="results"></input>
+  		  <input type="submit" value="Search" name="Search"></input>
   		  </form>
       </div>
 
