--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -9,6 +9,11 @@
 
       {% include "textchange/navbar.html" %}
 
+      <p>I do cool things sometimes</p>
+      <p>lots of garbage for testing... sdfs eg srg drt drt hd hdrthdrt h drt hd rt h drt h drth dr th dr thdrt h dr th drt h dr
+         drt h drth d rth dr th dr h drt h drt h drt h dr th dr th dr th    dr th d rth dr th dr th d r th dr h rd ht
+          drhtr dh dr rh t drt dh dr d r</p>
+      </th>
       <footer class="footer">
         <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
       </footer>
