--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -15,29 +15,27 @@
 
         <form method="POST"> {% csrf_token %}
   		  {{ form3.as_p }}
-  		  <input type="submit" value="Search" name="Search"></input>
+  		  <input id="search" type="submit" value="Search" name="Search"></input>
   		  </form>
       </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <a class="btn btn-lg btn-success" href="{% url 'textchange:wishlisting' %}" role="button">Wishlist and Postings</a>
-          <p>View your wishlist and postings here.</p>
+          <a class="btn btn-lg btn-success option" href="{% url 'textchange:wishlisting' %}" role="button">Wishlist and Postings</a>
+          <p>View and delete items from your wishlist and postings here.</p>
         </div>
 
         <div class="col-lg-6">
-          <a class="btn btn-lg btn-success" href="{% url 'textchange:settings' %}" role="button">Profile</a>
-          <p>Change your profile and application settings here</p>
+          <a class="btn btn-lg btn-success option" href="{% url 'textchange:settings' %}" role="button">Profile</a>
+          <p>Change your profile and contact information here. test test</p>
         </div>
-      </div>
-      <div class="row marketing">
         <div class="col-lg-6">
-          <a class="btn btn-lg btn-success" href="{% url 'textchange:about' %}" role="button">About Me</a>
+          <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">About Me</a>
           <p>Learn about the developer</p>
         </div>
 
-        <div class="col-lg-6">
-          <a class="btn btn-lg btn-success" href="{% url 'textchange:contactme' %}" role="button">Contact Me</a>
+        <div class="col-lg-6 option">
+          <a class="btn btn-lg btn-success option" href="{% url 'textchange:contactme' %}" role="button">Contact Me</a>
           <p>Send in any requests or concerns</p>
         </div>
       </div>
