--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -13,8 +13,8 @@
         <h1>{{ text.textbook_name }}!</h1>
         <p class="lead">{{ text.class_name }} {{ text.author }} {{ text.isbn }}</p>
         <form action="{% url 'textchange:textbook' uisbn=text.isbn %}" method="post"> {% csrf_token %}
-          <input type="submit" name="AddListing" value="Add a Posting"></input>
-          <input type="submit" name="AddWishlist" value="Add to Wishlist"></input>
+          <input class="good" type="submit" name="AddListing" value="Add a Posting"></input>
+          <input class="good" type="submit" name="AddWishlist" value="Add to Wishlist"></input>
         </form>
       </div>
 
