--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -9,10 +9,28 @@
 
       {% include "textchange/navbar.html" %}
 
-      <p>I do cool things sometimes</p>
-      <p>lots of garbage for testing... sdfs eg srg drt drt hd hdrthdrt h drt hd rt h drt h drth dr th dr thdrt h dr th drt h dr
-         drt h drth d rth dr th dr h drt h drt h drt h dr th dr th dr th    dr th d rth dr th dr th d r th dr h rd ht
-          drhtr dh dr rh t drt dh dr d r</p>
+      <h2>About Me</h2>
+      <p>Hello Texchange visitor,</p>
+      <p>My name is Joe and I am a 3rd year software engineering student studying at the University of Victoria.
+      Thank you for visiting my web application.
+      I developed Texchange in an effort to make textbook exchange at UVic easier than any other methods that are currently available.
+      Texchange falls into the strictly niche market of UVic as only textbooks needed for the term can be listed. This was done
+      make the application easier to follow and understand as it is not filled with all varietys of textbooks.
+      </p>
+      <p>If you would like to learn more about my skills and projects please visit my LinkedIn profile or github profile
+      with the links below.</p>
+        <span>&nbsp;&nbsp;&nbsp;</span>
+        <a href="https://ca.linkedin.com/pub/joe-czepil/69/73/b1b">
+        <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Joe Czepil's profile on LinkedIn">
+        </a>
+        <span>&nbsp;&nbsp;&nbsp;</span>
+        <a href="https://github.com/programmingjoe">
+        <img src="../../static/textchange/github.png" height="33">
+        </a>
+      </br></br>
+      <p>If you would like to give feedback, request features, or make any suggestions about the site please send an email
+      the account listed below.
+      </p>
       </th>
       <footer class="footer">
         <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
