--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -24,19 +24,9 @@
           <a class="btn btn-lg btn-success option" href="{% url 'textchange:wishlisting' %}" role="button">Wishlist and Postings</a>
           <p>View and delete items from your wishlist and postings here.</p>
         </div>
-
-        <div class="col-lg-6">
-          <a class="btn btn-lg btn-success option" href="{% url 'textchange:settings' %}" role="button">Profile</a>
-          <p>Change your profile and contact information here. test test</p>
-        </div>
         <div class="col-lg-6">
           <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">About Me</a>
-          <p>Learn about the developer</p>
-        </div>
-
-        <div class="col-lg-6 option">
-          <a class="btn btn-lg btn-success option" href="{% url 'textchange:contactme' %}" role="button">Contact Me</a>
-          <p>Send in any requests or concerns</p>
+          <p>Learn about and contact the developer</p>
         </div>
       </div>
 
