--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -23,7 +23,7 @@
             <tr><td>{{wishes.textbook}}</td>
               <td>
               <form action="{% url 'textchange:removewishlisting' uisbn=wishes.textbook.isbn %}" method="post"> {% csrf_token %}
-              <input class="bad" type="submit" name="DeleteWishlist" value="Delete"></input>
+              <input class="delete" type="submit" name="DeleteWishlist" value="Delete"></input>
               </form>
               </td></tr>
             {% endfor %}
@@ -37,7 +37,7 @@
             <tr><td>{{posts.textbook}}</td><td>{{posts.condition}}</td><td>{{posts.price}}</td>
               <td>
               <form action="{% url 'textchange:removewishlisting' uisbn=posts.textbook.isbn %}" method="post"> {% csrf_token %}
-              <input type="submit" name="DeletePosting" value="Delete"></input>
+              <input class="delete" type="submit" name="DeletePosting" value="Delete"></input>
               </form>
               </td></tr>
             {% endfor %}
