--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -9,6 +9,8 @@
 
 	  {% include "textchange/navbar.html" %}
 
+        <!-- <h2>Your Postings and Wishlist</h2>
+        <p>In order to delete your postings or wishes press the delete button</p> -->
       <div class="jumbotron">
         <h2>Your Postings and Wishlist</h2>
         <p>In order to delete your postings or wishes press the delete button</p>
