--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -9,8 +9,8 @@
 
       {% include "textchange/navbar.html" %}
 
-      <h2>About Me</h2>
-      <p>Hello Texchange visitor,</p>
+      <h2>About</h2>
+      <p>Hello visitor!</p>
       <p>My name is Joe and I am a 3rd year software engineering student studying at the University of Victoria.
       Thank you for visiting my web application.
       I developed Texchange in an effort to make textbook exchange at UVic easier than any other methods that are currently available.
