--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -58,6 +58,11 @@
 }
 
 #help {
+  position: fixed;
+  height: 30px;
+  width: 50px;
+  bottom: 15px;
+  right: 15px;
   background-color: #C5C5C5;
 }
 
