--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -26,4 +26,12 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+
+  <!-- Info displayed when site it shared/linked -->
+  <meta property="og:url"           content="http://www.texchange.ca" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="UVic Texchange - Making exchanging textbooks easy" />
+  <meta property="og:description"   content="WHAT HAPPENED NEXT?! CLICKBAIT!" />
+  <meta property="og:image"         content="../../static/textchange/linkpic.jpg" />
+
 </head>
