Cosmetic, contact page, load staticfiles
-Minor cosmetic changes
-Implemented load staticfiles rather than static paths
-Started creating contact page, split into 2 separate pages
-Added more textbooks to db

--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -46,7 +46,7 @@
         </a>
         <span>&nbsp;&nbsp;&nbsp;</span>
         <a href="https://github.com/programmingjoe">
-        <img src="../../static/textchange/github.png" height="33">
+        <img src="{% static "textchange/github.png" %}" height="33">
         </a>
       </br>
     </br>
