--- a/textchange/templates/textchange/home.html
+++ b/textchange/templates/textchange/home.html
@@ -11,7 +11,7 @@
       {% include "textchange/navbar.html" %}
 
       <div class="jumbotron">
-        <h1>Textchange!</h1>
+        <h1>Texchange!</h1>
         <p class="lead">Buy and sell used textbooks, easily, and at low prices!</p>
 
         <form method="POST"> {% csrf_token %}
