--- a/textchange/templates/textchange/navbar.html
+++ b/textchange/templates/textchange/navbar.html
@@ -9,7 +9,7 @@
       {% endif %}
     </ul>
   </nav>
-  <h3 class="text-muted"><a href="{% url 'textchange:home' %}" class="blacklink" id="home">Texchange UVic</a></h3>
+  <h3 class="text-muted"><a href="{% url 'textchange:home' %}" class="blacklink textbutton">Texchange UVic</a></h3>
 </div>
 
 <button id="help" class="button"><a href="{% url 'textchange:help' %}" class="blacklink">help</a></button>
